HUE-2772 [filebrowser] Fix alignment of dropdown menus
When the history drop-down menu was introduced it was set to be right-aligned by adjusting the general style, causing all the drop-downs to be right aligned. This commit changes the style adjustment to only target the history button.

--- a/apps/filebrowser/src/filebrowser/static/filebrowser/css/listdir_components.css
+++ b/apps/filebrowser/src/filebrowser/static/filebrowser/css/listdir_components.css
@@ -173,7 +173,7 @@
   cursor: default;
 }
 
-.dropdown-menu {
+.history > .dropdown-menu {
   left: inherit;
   right: 0;
 }
